Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117073

QtWebEngine compiler error

    XMLWordPrintable

Details

    • Windows
    • 0bf081ee2 (87-based), 851cd7c7a (87-based), 9289004de (5.15)

    Description

      When building Qt5.15.12 ane Qt5.15.15 source for MSVS 2922, using following configure, subsequent build fails. 

      configure -prefix D:\path -release -commercial -nomake examples -nomake tests -no-angle -qt-zlib -qt-libpng -qt-libjpeg -openssl-linked "OPENSSL_PREFIX=C:\OpenSSL\win64\WIN8664" -opengl desktop -webengine-pepper-plugins -make-tool nmake

      When start building it fails with following 

      in Qt 5.15.15 seems having lower version of webeninge

      FAILED: obj/third_party/perfetto/src/trace_processor/storage_minimal/trace_sorter.obj
      ninja -t msvc -e environment.x64 -- "C:\Program Files\Microsoft Visual Studio\2022\Professional\VC\Tools\MSVC\14.37.32822\bin\HostX64\x64/cl.exe" /nologo /showIncludes -DUSE_AURA=1 -DOFFICIAL_BUILD -DTOOLKIT_QT -D_HAS_EXCEPTIONS=0 -D__STD_C -D_CRT_RAND_S -D_CRT_SECURE_NO_DEPRECATE -D_SCL_SECURE_NO_DEPRECATE -D_ATL_NO_OPENGL -D_WINDOWS -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -DPSAPI_VERSION=2 -DWIN32 -D_SECURE_ATL -DWINAPI_FAMILY=WINAPI_FAMILY_DESKTOP_APP -DWIN32_LEAN_AND_MEAN -DNOMINMAX -D_UNICODE -DUNICODE -DNTDDI_VERSION=NTDDI_WIN10_VB -D_WIN32_WINNT=0x0A00 -DWINVER=0x0A00 -DNDEBUG -DNVALGRIND -DDYNAMIC_ANNOTATIONS_ENABLED=0 -DPERFETTO_IMPLEMENTATION -Igen -I../../3rdparty/chromium -I../../3rdparty/chromium/third_party/protobuf/src -Igen/protoc_out -I../../3rdparty/chromium/third_party/perfetto -I../../3rdparty/chromium/third_party/perfetto/include -Igen/third_party/perfetto/build_config -Igen/third_party/perfetto -I../../3rdparty/chromium/third_party/jsoncpp/source/include -I../../3rdparty/chromium/third_party/zlib /Gy /FS /bigobj /utf-8 /Zc:sizedDealloc- /W4 /wd4091 /wd4127 /wd4251 /wd4275 /wd4312 /wd4324 /wd4351 /wd4355 /wd4503 /wd4589 /wd4611 /wd4100 /wd4121 /wd4244 /wd4505 /wd4510 /wd4512 /wd4610 /wd4838 /wd4995 /wd4996 /wd4456 /wd4457 /wd4458 /wd4459 /wd4200 /wd4201 /wd4204 /wd4221 /wd4245 /wd4267 /wd4305 /wd4389 /wd4702 /wd4701 /wd4703 /wd4661 /wd4706 /wd4715 /wd4003 /O1 /Ob2 /Oy- /Zc:inline /Gw /Oi /MD /TP /wd4577 /GR- /c ../../3rdparty/chromium/third_party/perfetto/src/trace_processor/trace_sorter.cc /Foobj/third_party/perfetto/src/trace_processor/storage_minimal/trace_sorter.obj /Fd"obj/third_party/perfetto/src/trace_processor/storage_minimal_cc.pdb"
      ../../3rdparty/chromium/third_party/perfetto\src/trace_processor/storage/metadata.h(63): warning C4068: unknown pragma 'GCC'
      ../../3rdparty/chromium/third_party/perfetto\src/trace_processor/storage/stats.h(192): warning C4068: unknown pragma 'GCC'
      ../../3rdparty/chromium/third_party/perfetto\src/trace_processor/tables/macros_internal.h(143): warning C4068: unknown pragma 'GCC'
      C:\Program Files\Microsoft Visual Studio\2022\Professional\VC\Tools\MSVC\14.37.32822\include\algorithm(8002): error C2672: 'swap': no matching overloaded function found
      C:\Program Files\Microsoft Visual Studio\2022\Professional\VC\Tools\MSVC\14.37.32822\include\sstream(907): note: could be 'void std::swap(std::basic_stringstream<_Elem,_Traits,_Alloc> &,std::basic_stringstream<_Elem,_Traits,_Alloc> &) noexcept'
      C:\Program Files\Microsoft Visual Studio\2022\Professional\VC\Tools\MSVC\14.37.32822\include\algorithm(8002): note: 'void std::swap(std::basic_stringstream<_Elem,_Traits,_Alloc> &,std::basic_stringstream<_Elem,_Traits,_Alloc> &) noexcept': could not deduce template argument for 'std::basic_stringstream<_Elem,_Traits,_Alloc> &' from 'T'
      with
      [
      T=perfetto::trace_processor::TimestampedTracePiece
      ] 

      Attachments

        For Gerrit Dashboard: QTBUG-117073
        # Subject Branch Project Status CR V

        Activity

          People

            qt_webengine_team Qt WebEngine Team
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes