Fix errors and warnings for perfetto

It seems newest msvc compiler does not like perfetto circualar queue
const iterator, which ends in issues with std::swap of std::sort.
Make sure it is non const.

Fix warnings.

Deals with: "error C2672: 'swap': no matching overloaded function
found."

Fixes: QTBUG-117073
Change-Id: I02901e61a1bb8863d72ca02a0ccd841e54309d6e
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/505412
Reviewed-by: Martin Negyokru <negyokru@inf.u-szeged.hu>
Reviewed-by: Michael Brüning <michael.bruning@qt.io>