chromium/third_party/perfetto/src/trace_processor/storage/stats.h
@@ -189,7 +189,9 @@ enum Source {
 };
 
 // Ignore GCC warning about a missing argument for a variadic macro parameter.
+#if PERFETTO_BUILDFLAG(PERFETTO_COMPILER_GCC)
 #pragma GCC system_header
+#endif
 
 // Declares an enum of literals (one for each stat). The enum values of each
 // literal corresponds to the string index in the arrays below.
